...
                }

                Section {
                    Button(role: .destructive, action: logout) {
                        HStack {
                            Spacer()
                            Text("Sign Out")
                            Spacer()
                        }
                    }
                }
            }
            .navigationTitle("Settings")
...
